kubernetes/n8n/helm/n8n/ingress.yaml
---
# Source: n8n/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n
  labels:
    app.kubernetes.io/name: n8n
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/version: "1.116.2"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/description: Workflow Automation
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: n8n.png
    gethomepage.dev/name: n8n
spec:
  tls:
    - hosts:
        - "n8n.k.oneill.net"
      secretName: n8n-tls
  rules:
    - host: "n8n.k.oneill.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
